chg: refactored core game instance